Fixed CSS for banner dropdown (was misaligned/misplaced), redid structure to fix empty banner, and padding for the newsfeed

--- a/app/assets/stylesheets/newsfeed.scss
+++ b/app/assets/stylesheets/newsfeed.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .newsfeed-container {
+  padding-top: 10px;
   margin: 0 auto;
   min-width: 500px;
   max-width: 680px; 
