--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -125,8 +125,8 @@
   box-shadow: 0 0.3px 0.3px rgba(0, 0, 0, 0.1), 0 2px 10px rgba(0, 0, 0, 0.1);
   font-size: 15px;
   position: absolute;
-  bottom: -10px;
-  right: 40px;
+  top: 95%;
+  right: 30px;
   width: 300px;
   z-index: 5;
 }
@@ -195,11 +195,8 @@
 
 .empty-profile-banner{
   background-color: #f0f2f5;
-  height: 100%;
-  max-width: 1250px;
-  max-height: 463px;
-  width: 100%;
-  padding: 37%;
+  height: 500px;
+  width: 2000px;
   position: relative;
   z-index: 0;
 }
